# android-hardware-buffer-camera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dz/camerafast/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dz/camerafast/: Camera2.kt  CameraActivity.kt  CameraBox.kt  CameraMode.kt  CameraPreviewView.kt  CameraX.kt  CoreEngine.kt  DisplayMode.kt  RenderingEngine.kt  RenderingMode.kt
app/src/main/java/com/dz/camerafast/camera/: Camera2.kt  CameraData.kt  CameraX.kt
app/src/main/native/: CMakeLists.txt
app/src/main/native/cpp/: base_renderer.cpp  base_renderer.hpp  core_engine.cpp  core_engine.hpp  looper_thread.cpp  looper_thread.hpp  main.cpp  opengl_renderer.cpp  opengl_renderer.hpp  rendering_engine.cpp  rendering_engine.hpp  run_loop.cpp  run_loop.hpp  util.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_wrapper.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dz/camerafast/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
